[feature] Update documentation
